--- a/src/main/webapp/map.html
+++ b/src/main/webapp/map.html
@@ -222,7 +222,7 @@
                 markerLayer.getSource().addFeature(marker);
             });
         })
-        .catch(error => console.error('Errore nel caricare le segnalazioni:', error));
+        .catch(error => console.error('Errore:', error));
 </script>
 </body>
 </html>
