Close to ending admin part, waiting for MapEntry specification for fetch and update queries

--- a/src/main/webapp/admin-login.html
+++ b/src/main/webapp/admin-login.html
@@ -100,6 +100,6 @@
         }
     });
 </script>
-<script src="../webapp/admin-login.js"></script>
+<script src="../webapp/admin.js"></script>
 </body>
 </html>
