--- a/src/main/webapp/admin-dashboard.html
+++ b/src/main/webapp/admin-dashboard.html
@@ -38,12 +38,29 @@
             height: calc(100vh - 130px);
             flex: 1;
             padding: 20px;
-            text-align: center;
+            align-items: center;
             background-color: #fff;
             border: 1px solid #ccc;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             overflow: auto;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .form-group {
+            place-items: center;
+        }
+        #close-segnalazione-form,
+        #suspend-user-form {
+            text-align: center;
+            align-items: center;
+            border: 5px;
+        }
+
+
+        ul {
+            list-style-type: none;
         }
 
     </style>
@@ -52,22 +69,160 @@
 
 <div class="admin-dashboard-header">
     <h2>Admin Dashboard</h2>
-    <form id="login-form" action="/logout" method="post" style="">
+    <form id="login-form" action="/logout" method="post">
         <button type="submit">Logout</button>
     </form>
 </div>
 
 <div class="dashboard-container">
-    <div class="section">
-        div1
+    <div class="section" id="login-history">
+        <form id="login-history-form">
+            <button id="fetch-login-history">Registro Accessi</button>
+        </form>
+        <span id="login-history-text"></span>
+
     </div>
     <div class="section">
-        div2
+        <form id="fetch-users-form">
+            <button id="fetch-all-users">Elenco utenti iscritti</button>
+        </form>
+
+        <span id="all-users-text" style="margin: 5px"></span>
+
+        <form id="suspend-user-form" action="/suspend-user" method="post">
+
+            <div class="form-group">
+                <label for="username"></label>
+                <input type="text" name="username" id="username" placeholder="Utente da sospendere" required>
+            </div>
+
+            <button id="suspend-user-button" >Sospendi Utente</button>
+        </form>
     </div>
     <div class="section">
-        div3
+        <form id="fetch-segnalazioni-form">
+            <button id="fetch-all-segnalazioni">Elenco utenti iscritti</button>
+        </form>
+
+        <span id="all-segnalazioni-text" style="margin: 5px"></span>
+
+        <form id="close-segnalazione-form" action="/close-segnalazione" method="post">
+
+            <div class="form-group">
+                <label for="segnalazione"></label>
+                <input type="text" name="segnalazione" id="segnalazione" placeholder="Segnalazione da chiudere" required>
+            </div>
+
+            <button id="close-segnalazione-button" >Sospendi Utente</button>
+        </form>
+
     </div>
 </div>
-<script src="../webapp/admin-dashboard.js"></script>
+<script>
+    document.getElementById('fetch-login-history').addEventListener('click', function(event) {
+        event.preventDefault();
+        console.log('Click on "Fetch Login History" button'); // Log when the button is clicked
+        fetch('/login-history')
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok ' + response.statusText);
+                }
+                console.log('Response received'); // Log when the response is received
+                return response.json();
+            })
+            .then(data => {
+                console.log('Received data:', data); // Log the received data
+                const container = document.getElementById('login-history-text');
+                container.innerHTML = '<ul>' + data.map(item => `<li>${item}</li>`).join('') + '</ul>';
+            })
+            .catch(error => console.error('Error fetching data:', error));
+    });
+</script>
+
+<script>
+    document.getElementById('fetch-all-users').addEventListener('click', function(event) {
+        event.preventDefault();
+        console.log('Click on "Fetch All Users" button'); // Log when the button is clicked
+        fetch('/fetch-users')
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok ' + response.statusText);
+                }
+                console.log('Response received'); // Log when the response is received
+                return response.json();
+            })
+            .then(data => {
+                console.log('Received data:', data); // Log the received data
+                const container = document.getElementById('all-users-text');
+                container.innerHTML = '<ul>' + data.map(item => `<li>${item}</li>`).join('') + '</ul>';
+            })
+            .catch(error => console.error('Error fetching data:', error));
+    });
+</script>
+
+<script>
+    document.getElementById('suspend-user-form').addEventListener('submit', async (event) => {
+        event.preventDefault(); // Prevent default form submission
+
+        const formData = new FormData(event.target); // Use event.target to get the form
+        const username = formData.get('username');
+
+        // Send request to server
+        const response = await fetch('/suspend-user', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ username })
+        });
+
+        if (response.ok) {
+            alert('User ' + username + ' suspended successfully');
+        } else {
+            alert('Suspend failed: ' + await response.text());
+        }
+    });
+</script>
+
+<script>
+    document.getElementById('fetch-all-segnalazioni').addEventListener('click', function(event) {
+        event.preventDefault();
+        console.log('Click on "Fetch All Segnalazioni" button'); // Log when the button is clicked
+        fetch('/fetch-segnalazioni')
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok ' + response.statusText);
+                }
+                console.log('Response received'); // Log when the response is received
+                return response.json();
+            })
+            .then(data => {
+                console.log('Received data:', data); // Log the received data
+                const container = document.getElementById('all-segnalazioni-text');
+                container.innerHTML = '<ul>' + data.map(item => `<li>${item}</li>`).join('') + '</ul>';
+            })
+            .catch(error => console.error('Error fetching data:', error));
+    });
+</script>
+
+<script>
+    document.getElementById('close-segnalazione-form').addEventListener('submit', async (event) => {
+        event.preventDefault(); // Prevent default form submission
+
+        const formData = new FormData(event.target); // Use event.target to get the form
+        const segnalazione = formData.get('segnalazione');
+
+        // Send request to server
+        const response = await fetch('/close-segnalazione', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ segnalazione })
+        });
+
+        if (response.ok) {
+            alert('Segnalazione ' + segnalazione + ' closed successfully');
+        } else {
+            alert('Closing failed: ' + await response.text());
+        }
+    });
+</script>
 </body>
 </html>
