--- a/src/main/webapp/map.html
+++ b/src/main/webapp/map.html
@@ -26,6 +26,8 @@
         #commentModal {
             top: 150px;
             left: 150px;
+            max-height: 400px;
+            overflow-y: auto;
         }
     </style>
 </head>
@@ -49,6 +51,7 @@
 
 <div id="commentModal">
     <div id="dettagliSegnalazione"></div>
+    <div id="commenti"></div>
     <br>
     <label for="nuovoCommento">Aggiungi un commento:</label>
     <textarea id="nuovoCommento"></textarea>
@@ -121,7 +124,10 @@
                 coordinate: ol.proj.toLonLat(coordinate)
             })
         }).then(response => response.json())
-            .then(data => console.log(data))
+            .then(data => {
+                marker.setId(data._id);
+                console.log(data);
+            })
             .catch(error => console.error('Errore:', error));
     }
 
@@ -142,7 +148,11 @@
             }).then(response => response.json())
                 .then(data => {
                     console.log(data);
-                    selectedMarker.set('commento', data.commento);
+                    var commentiDiv = document.getElementById('commenti');
+                    var commentElement = document.createElement('p');
+                    commentElement.textContent = nuovoCommento;
+                    commentiDiv.appendChild(commentElement);
+                    document.getElementById('nuovoCommento').value = '';
                 })
                 .catch(error => console.error('Errore:', error));
         }
@@ -175,11 +185,28 @@
         var commento = marker.get('commento');
 
         var dettagli = `
-            <p>Tipo: ${tipo}</p>
-            <p>Commento: ${commento}</p>
-            <p>Coordinate: ${ol.proj.toLonLat(coordinate)}</p>
-        `;
+        <p>Tipo: ${tipo}</p>
+        <p>Commento: ${commento}</p>
+        <p>Coordinate: ${ol.proj.toLonLat(coordinate)}</p>
+    `;
         document.getElementById('dettagliSegnalazione').innerHTML = dettagli;
+
+        // Pulisci il contenuto del div dei commenti
+        document.getElementById('commenti').innerHTML = '';
+
+        // Fetch e visualizza i commenti della segnalazione
+        fetch(`/api/segnalazioni/${marker.getId()}/commenti`)
+            .then(response => response.json())
+            .then(commenti => {
+                var commentiDiv = document.getElementById('commenti');
+                commenti.forEach(commento => {
+                    var commentElement = document.createElement('p');
+                    commentElement.textContent = commento;
+                    commentiDiv.appendChild(commentElement);
+                });
+            })
+            .catch(error => console.error('Errore:', error));
+
         document.getElementById('commentModal').style.display = 'block';
     }
 
@@ -222,6 +249,8 @@
                 markerLayer.getSource().addFeature(marker);
             });
         })
+
+
         .catch(error => console.error('Errore:', error));
 </script>
 </body>
