--- a/src/main/webapp/map.html
+++ b/src/main/webapp/map.html
@@ -102,7 +102,8 @@
         marker.setStyle(new ol.style.Style({
             image: new ol.style.Icon({
                 src: 'marker-icon.png',
-                scale: 0.1
+                scale: 0.1,
+                anchor: [0.5, 1] // Posiziona l'ancora dell'icona
             })
         }));
 
@@ -215,7 +216,8 @@
                 marker.setStyle(new ol.style.Style({
                     image: new ol.style.Icon({
                         src: 'marker-icon.png',
-                        scale: 0.1
+                        scale: 0.1,
+                        anchor: [0.5, 1] // Posiziona l'ancora dell'icona
                     })
                 }));
 
