--- a/src/main/webapp/map.html
+++ b/src/main/webapp/map.html
@@ -39,6 +39,7 @@
     <select id="tipo">
         <option value="Problema Stradale">Problema Stradale</option>
         <option value="Rifiuti">Rifiuti</option>
+        <option value="Incidente">Incidente</option>
         <option value="Altro">Altro</option>
     </select>
     <br>
