Modified HTTP endpoints according to API description

--- a/src/main/webapp/admin-dashboard.html
+++ b/src/main/webapp/admin-dashboard.html
@@ -70,7 +70,7 @@
 
 <div class="admin-dashboard-header">
     <h2>Admin Dashboard</h2>
-    <form id="login-form" action="/logout" method="post">
+    <form id="login-form" action="/admin-logout" method="post">
         <button type="submit">Logout</button>
     </form>
 </div>
