--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -77,7 +77,7 @@
     </div>
     <button type="submit">Accedi</button>
   </form>
-  <form id="form-admin-login" action="/admin-login" method="get">
+  <form id="form-admin-login" action="/admin" method="get">
     <div class="admin-login">
       <button type="submit">Sei amministratore? Accedi da qui</button>
     </div>
