--- a/src/main/frontend/login.html
+++ b/src/main/frontend/login.html
@@ -113,14 +113,15 @@
     });
 
     if (response.ok) {
+      const data = await response.json();
       alert('Login successful');
-      window.location.href="./webapp/map.html";
-      //manda a map.html
+      window.location.href = data.redirect;
+      //manda a map
     } else {
       alert('Login failed: ' + await response.text());
     }
+
   });
 </script>
-<script src="../server.js"></script>
 </body>
 </html>
