--- a/src/main/frontend/registrazione.html
+++ b/src/main/frontend/registrazione.html
@@ -47,6 +47,7 @@
         button {
             width: 100%;
             padding: 10px;
+            margin: 10px;
             background-color: #007bff;
             color: #fff;
             border: none;
@@ -56,20 +57,6 @@
 
         button:hover {
             background-color: #0056b3;
-        }
-
-        .back-link {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .back-link a {
-            color: #007bff;
-            text-decoration: none;
-        }
-
-        .back-link a:hover {
-            text-decoration: underline;
         }
 
         .error_info {
@@ -107,9 +94,9 @@
         </div>
         <button type="submit">Registrati</button>
     </form>
-    <div class="back-link">
-        <a href="login.html">Torna al login</a>
-    </div>
+    <form id="form-user-login" action="/login" method="get">
+        <button class="btn" type="submit">Torna al login utente</button>
+    </form>
 </div>
 <script>
     document.addEventListener('DOMContentLoaded', () => {
